# aminah-jaya

./: CLAUDE.md  README.md  package-lock.json  package.json  prompt.md
api-cms-aminah-jaya/: .env.example.local  .env.example.production  Aminah_Jaya_CMS.postman_collection.json  BACKEND_COORDINATES_IMPLEMENTATION.md  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
api-cms-aminah-jaya/migrations/: 20260501000000_initial_schema.sql  20260503000000_add_product_image.sql  20260503000001_remove_product_image_url.sql  20260509000000_add_flash_sales.sql  20260509000001_add_blogs.sql  20260513000000_add_settings.sql  20260513000001_add_appearance_to_settings.sql  20260513000002_make_banner_text_optional.sql  20260513000003_drop_banner_text_columns.sql  20260514000000_add_indexes.sql  20260514000001_add_flash_sale_items_product_id_index.sql  20260514000002_add_coupons.sql  20260515000000_add_notifications.sql  20260515000001_add_user_and_contact_to_notifications.sql  20260515000002_add_legal_pages.sql  20260515000003_simplify_legal_pages.sql  20260515000004_expand_product_details.sql  20260516000001_add_cart_and_customer_auth.sql  20260517000001_add_customer_favorites.sql  20260517000002_add_collections.sql  20260517000003_add_shipping_address_to_customers.sql  20260517000004_add_customer_id_to_orders.sql  20260520000000_add_shipping_coordinates.sql  20260521000000_change_shipping_coordinates_to_double_precision.sql  20260522000000_add_order_coupon_fields.sql  (+3 more)
api-integrasi-aminah-jaya/: Aminah_Jaya_Integration.postman_collection.json  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
(+229 files in other folders)
